# vagrant-digital-agenda-scoreboard

./: README.org  Vagrantfile  bootstrap-rpm.sh  configure.ac  homepage.html  homepage.org
OpenData/examples-das/: metadata-cy-1.xls  observations-cy-1.xls  observations-cy-2.xls  observations-template.xls
config-files/: cr.groups.xml  cr.pom.xml  eionet.contreg-local.properties  elda-E1.2.19-index.html  elda-E1.2.21-index.html  elda-index.html  elda-jetty.xml  elda-scoreboard.ttl  elda-scoreboard.ttl~  elda-web.xml  elda-web.xml~  hosts.txt  httpd.conf  plone-scoreboard-base.cfg  plone-versions-4.3.cfg  scoreboard-init  scoreboard-test.conf  scoreboard.conf  ssl.conf  tomcat-server.xml  tomcat-users.xml  virtuoso-init  virtuoso-test-init  virtuoso.ini  virtuosotest.ini
scripts/: build.sh.in  das-install.sh.in  processes.sh.in  setup.sh.in
