AC_INIT(das, 0.1, paul.massey@tenforce.com)
AC_SUBST(WORKDIR,"/tmp")
AC_PROG_AWK
AC_PROG_GREP
AC_PROG_SED
AC_CHECK_PROG(FIND, [find], [/usr/bin/find])
AC_CHECK_PROG(TAR, [tar],[/bin/tar])
AC_CHECK_PROG(SORT, [sort],[/usr/bin/sort])
AC_CHECK_PROG(AWK, [awk],[/usr/bin/awk])
AC_CHECK_PROG(TR, [tr],[/usr/bin/tr])
AC_CHECK_PROG(MAKE, [make], [/usr/bin/make])
AC_CHECK_PROG(EMACS, [emacs],[/usr/bin/emacs])
AC_CHECK_PROG(SSH,[ssh],[/usr/bin/ssh])
AC_CHECK_PROG(SCP,[scp],[/usr/bin/scp])
AC_CONFIG_FILES([scripts/build.sh scripts/das-install.sh scripts/setup.sh scripts/processes.sh])
AC_OUTPUT
