AC_INIT(das, 0.1, paul.massey@tenforce.com)
AC_SUBST(WORKDIR,"/tmp")
AC_PROG_AWK
AC_PROG_GREP
AC_PROG_SED
AC_CHECK_PROG(FIND, [find], [/usr/bin/find])
AC_CHECK_PROG(TAR, [tar],[/bin/tar])
AC_CHECK_PROG(SORT, [sort],[/usr/bin/sort])
AC_CHECK_PROG(AWK, [awk],[/usr/bin/awk])
AC_CHECK_PROG(TR, [tr],[/usr/bin/tr])
AC_CHECK_PROG(MAKE, [make], [/usr/bin/make])
AC_CHECK_PROG(EMACS, [emacs],[/usr/bin/emacs])
AC_CHECK_PROG(SSH,[ssh],[/usr/bin/ssh])
AC_CHECK_PROG(SCP,[scp],[/usr/bin/scp])
AC_CHECK_PROG(GIT,[git],[/usr/bin/git])
AC_CHECK_PROG(WGET,[wget],[/usr/bin/wget])
AC_CHECK_PROG(CURL,[curl],[/usr/bin/curl])
AC_CHECK_PROG(M4,[m4],[/usr/bin/m4])
AC_CHECK_PROG(GCC,[gcc],[/usr/bin/gcc])
AC_CHECK_PROG(BISON,[bison],[/usr/bin/bison])
AC_CHECK_PROG(GMAKE, [gmake], [/usr/bin/gmake])
AC_CHECK_PROG(OPENSSL, [openssl], [/usr/bin/openssl])
AC_CHECK_PROG(DOS2UNIX, [dos2unix], [/usr/bin/dos2unix])
AC_CONFIG_FILES([scripts/build.sh scripts/das-install.sh scripts/setup.sh scripts/processes.sh])
AC_OUTPUT
